README and api docs
